[package]
name = "scraper_iter"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.7"
serde = { version = "1.0.216", features = ["derive"] }
scraper = "0.22.0"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.133"
async-stream = "0.3.6"
futures = "0.3.31"
