[package]
name = "scraper_iter"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.22.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
async-stream = "0.3.6"
futures = "0.3.31"
clap = { version = "4.5.23", features = ["derive"] }
search_with_google = "0.5"
thirtyfour = "0.35.0"
urlencoding = "2.1.3"
regex = "1.11.1"
