[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.22.0"
reqwest = { version = "0.12.9", features = ["json", "default-tls"] }
tokio = { version = "1.42.0", features = ["full"] }
async-stream = "0.3.6"
futures = "0.3.31"
clap = { version = "4.5.23", features = ["derive"] }
urlencoding = "2.1.3"
regex = "1.11.1"

[lib]
name = "web_crawler"
path = "src/lib.rs"

[[bin]]
name = "web_crawler"
path = "src/main.rs"